<?xml version="1.0" encoding="utf-8"?>
 <ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/txtTittle"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textSilahkanRegistrasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/textSilahkanRegistrasi"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/txtTittle"
            app:layout_constraintStart_toStartOf="@id/txtTittle"
            app:layout_constraintTop_toBottomOf="@+id/txtTittle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textSilahkanRegistrasi">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtEmailInput"
                android:inputType="textEmailAddress">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pswInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/emailInput">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPswInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/txtPswInput">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btnSign"
            app:layout_constraintEnd_toEndOf="@+id/pswInput"
            app:layout_constraintStart_toStartOf="@+id/pswInput"
            app:layout_constraintTop_toBottomOf="@+id/pswInput" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSign"
            app:srcCompat="@drawable/group_3"
            tools:layout_editor_absoluteX="-19dp" />
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="350dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>





